# mymapp

./: .firebaserc  .gitignore  .stylelintrc  .versionrc.json  CHANGELOG.md  README.md  angular.json  capacitor.config.json  ionic.config.json  package-lock.json  package.json  tsconfig.base.json  tslint.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  main.yml
electron/: capacitor.config.json  index.js  package-lock.json  package.json  tsconfig.json
electron/src/: index.ts
src/: declarations.d.ts  global.scss  index.html  manifest.webmanifest
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: app.component.spec.ts  app.component.ts  app.module.ts  app.routing.ts
src/app/home/: home.module.ts  home.page.html  home.page.scss  home.page.spec.ts  home.page.ts  home.routing.ts
src/app/img-viewer/: img-viewer.module.ts  img-viewer.page.html  img-viewer.page.scss  img-viewer.page.ts  img-viewer.routing.ts
src/app/models/: default-geojson-data.ts  error-action.ts  geocoder-result.ts  geojson-props.ts  map-style.ts  marker-props.ts  marker-types.ts  nav-contants.ts  photo-file-data.ts  photo-info.ts  store-action.ts
src/app/service/: map.service.spec.ts  map.service.ts  marker.service.ts
src/app/shared/: shared.module.ts
src/app/store/: app-store.module.ts
src/app/tab1/: tab1.module.ts
src/app/tab2/: tab2.module.ts
src/environments/: environment.prod.ts  environment.sample.ts  environment.ts
src/theme/: colors.scss  variables.scss
tools/: cargo-toml-updater.js
(+58 files in other folders)
