[package]
name = "mymapp"
version = "0.3.1"
description = "A Tauri App"
authors = [ "Andr35" ]
license = "MIT"
repository = "https://github.com/Andr35/mymapp"
default-run = "mymapp"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "mymapp"
path = "src/main.rs"
